--- a/src/components/BookingCancellation.module.css
+++ b/src/components/BookingCancellation.module.css
@@ -33,6 +33,9 @@
   border: 1px solid #222;
   background-color: #fff;
 }
+.bookingList .bookingBtn a {
+  display: block;
+}
 .bookingList .bookingBtn:nth-child(2) {
   border-right: none;
   border-left: none;
