--- a/src/components/BookingDetails.module.css
+++ b/src/components/BookingDetails.module.css
@@ -33,6 +33,9 @@
   border: 1px solid #222;
   background-color: #fff;
 }
+.bookingList .bookingBtn a {
+  display: block;
+}
 .bookingList .bookingBtn:first-child {
   background-color: #222;
   color: #fff;
