--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -22,19 +22,22 @@
 
 body {
   font-family: var(--font-R);
-  max-width: 500px;
-  min-width: 400px;
+  max-width: 600px;
+  min-width: 300px;
 	width: 100%;
 	margin: 0 auto;
 	color: #222;
 }
 section {
 	width: 100%;
-  max-width: 500px;
-  min-width: 400px;
+  max-width: 600px;
+  min-width: 300px;
   margin: 0 auto;
   text-align: center;
   padding: 70px 16px;
   margin-bottom: 100px;
 	position: relative;
+}
+input, textarea {
+	padding: 10px;
 }
