--- a/src/components/QR.module.css
+++ b/src/components/QR.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   text-align: left;
   border-bottom: 2px solid #222;
-  padding: 20px 10px;
+  padding: 20px 0;
 }
 .qr .title a {
   font-family: var(--font-EB);
