--- a/src/components/ReservationCancle.module.css
+++ b/src/components/ReservationCancle.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   text-align: left;
   border-bottom: 2px solid #222;
-  padding: 20px 10px;
+  padding: 20px 0;
 }
 .cancle .title a {
   font-family: var(--font-EB);
@@ -104,6 +104,7 @@
 }
 
 .bookingBtn {
+  font-size: 14px;
   background-color: #222;
   color: #fff;
   width: 100%; height: 50px;
