--- a/src/components/exhibitionIntro.module.css
+++ b/src/components/exhibitionIntro.module.css
@@ -2,7 +2,7 @@
   padding: 70px 0 30px;
 }
 .introSection .intro .introTitle {
-  padding: 20px 0;
+  padding: 20px 16px;
 }
 .introSection .intro .introTitle a {
   width: 30px; height: 30px;
