--- a/src/components/user.module.css
+++ b/src/components/user.module.css
@@ -1,13 +1,12 @@
 .user {
   width: 100%;
   text-align: left;
-  padding: 20px 10px;
+  padding: 20px 0;
 }
 .user .title {
   text-align: left;
   font-family: var(--font-EB);
   font-size: 23px;
-  padding-left: 40px;
 }
 
 .userInfo {
